--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+
     <title>MemoryGame</title>
   </head>
   <body>
